<resources>
    <string name="app_name">ProyectoFinal_TripSplit</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="registrate">Regístrate</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="buscar">Buscar...</string>
    <string name="crear_viaje_grupal">Crear viaje grupal</string>
    <string name="title_activity_registrar_gastos">RegistrarGastos</string>
    <string name="nombre_del_gasto">Nombre del Gasto</string>
    <string name="registra_un_gasto">Registra un Gasto</string>
    <string name="monto_total">Monto total</string>
    <string name="integrantes">Integrantes</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="unete">Únete</string>
    <string name="slogan">Gastos compartidos, viajes sin líos.</string>
    <string name="textoPresentacion">Divide y organiza los gastos de tu viaje fácilmente.</string>
    <string name="hintCodigo">EREE-2FSR-MSX7</string>
    <string name="instruccionCodigo">Ingresa el código del viaje:</string>
    <string name="btnBuscar">Buscar</string>
    <string name="montoTotal">Monto Total del Gasto:</string>
    <string name="nombreGasto">Nombre del Gasto</string>
    <string name="ejemploMonto">$979.00 MXN</string>
    <string name="categoriaDelGasto">Categoría:</string>
    <string name="ejemploCategoria">Nombre Categoría</string>
    <string name="deudaIndividual">Deuda Individual</string>
    <string name="crearCuenta">Crear Cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="confirmarContraseña">Confirmar Contraseña</string>
    <string name="crear">Crear Cuenta</string>
    <string name="yatienescuenta">¿Ya tengo una cuenta?</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="crearGrupo">Crear nuevo grupo</string>
    <string name="nombreGrupo">Nombre del Grupo</string>
    <string name="desde">Desde: </string>
    <string name="hacía">Hacía: </string>
    <string name="Salida">Salida: </string>
    <string name="llegada">Llegada</string>
    <string name="cuantosSon">¿Cuantos son?</string>
    <string name="unirme_a_grupo_n_de_viaje">Unirme a grupo \n de viaje</string>
    <string name="reporte_gastos">Reporte Gastos</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="saldo_disponible">Saldo Disponible:</string>
    <string name="reporte_gastos_mensuales">Reporte Gastos Mensuales</string>
    <string name="ver_reporte_de_gastos">Ver reporte de gastos</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>

    <string name="default_nombre_gasto">Sin nombre</string>
    <string name="default_categoria_gasto">Sin categoría</string>
    <string name="default_nombre_usuario">Usuario</string>

    <!-- Formatos de moneda y mensajes -->
    <string name="currency_format">$%.2f</string>
    <string name="debe_format">Debe: %s</string>
    <string name="recibe_format">Recibe: %s</string>

    <!-- Mensajes de error -->
    <string name="error_cargar_gastos">Error al cargar los gastos</string>
    <string name="error_cargar_miembros">Error al cargar los miembros</string>
    <string name="error_info_grupo">Falta información del grupo</string>

    <string name="foto_perfil_usuario">Foto de perfil del usuario</string>
    <string name="default_tipo_gasto">%1$s</string>
    <string name="a_la_par">A la par</string>


</resources>