<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <fragment
        android:id="@+id/topBarFragment"
        android:name="armenta.jose.proyectofinal_tripsplit.ui.fragments.TopBarFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_top_bar" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:text="@string/crearGrupo"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_nombreGrupo"
        style="@style/TripSplitEditTextStyle"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:hint="@string/nombreGrupo"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_desde"
        style="@style/TripSplitEditTextStyle"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:hint="@string/desde"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_salida"
        style="@style/TripSplitEditTextStyle"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:hint="@string/Salida"
        android:inputType="date" />

    <EditText
        android:id="@+id/et_llegada"
        style="@style/TripSplitEditTextStyle"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:hint="@string/llegada"
        android:inputType="date" />

    <EditText
        android:id="@+id/et_numIntegrantes"
        style="@style/TripSplitEditTextStyle"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:hint="@string/cuantosSon"
        android:inputType="number" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_crear"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/boton_redondo"
        android:text="@string/crear"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        app:menu="@menu/bottom_nav_menu" />
</LinearLayout>