<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Home">

    <!-- Top Bar Fragment -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/topBarFragment"
        android:name="armenta.jose.proyectofinal_tripsplit.ui.fragments.TopBarFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_top_bar" />

    <!-- Botones de acción -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_crearViaje"
            android:layout_width="182dp"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/boton_menu"
            android:drawableEnd="@mipmap/icon_crear_viaje_50"
            android:drawablePadding="10dp"
            android:drawableTint="@color/letra_boton_menu"
            android:drawableTintMode="src_in"
            android:gravity="center_vertical|start"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/crear_viaje_grupal"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textColor="@color/letra_boton_menu" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_unirseViaje"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/boton_menu"
            android:drawableEnd="@mipmap/icon_unirse_viaje_50"
            android:drawablePadding="10dp"
            android:drawableTint="@color/letra_boton_menu"
            android:drawableTintMode="src_in"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/unirme_a_grupo_n_de_viaje"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textAlignment="center"
            android:textColor="@color/letra_boton_menu" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_buscar"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="70dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_custom"
        android:drawableEnd="@mipmap/lupita"
        android:hint="@string/buscar"
        android:inputType="text"
        android:padding="12sp"
        android:textColor="@color/black"
        android:textColorHint="#BDBDBD"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ListView
            android:id="@+id/listViewGrupos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="1dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@mipmap/barra_decoracion_inferior" />

</LinearLayout>
